Changelog for Miosix np embedded OS

- isatty() and sync() are no longer pure virtual in FileBase, added default
  implementation as in many cases it's enough.
- Removed temporary Console initialization code from _init() and added it
  to individual BSPs. However, we're still using the deprecated Console
  interface and ConsoleAdapter class.
- Joined the InterruptOutputDevice and ConsoleDevice concepts.
  Renamed ConsoleDevice into DefaultConsole, and moved it in a file within
  devfs directory.
- Added code to prevent C++ exceptions from propagating through C syscalls.
- Removed support for old single filesystem support in libc_integration.
- File abstraction layer: Enabled echo by default in TerminalDevice, added
  mutex to serialize reads, and added support for handling the backspace
  character as an usability enhancement.
- File abstraction layer: switched from Mutex to FastMutex for performance.
- Fixed range of printable characters in memDump.
- File abstraction layer now handles stdin/stdout/stderr and passes the
  testsuite, still does not handle fat32 and echo on console is not working.
- File abstraction layer: added MountpointFs as the default root filesystem
  to allow mounting other filesystems.
- Added operator[] to StringPart.
- File abstraction layer: added pure virtual mkdir() to FilesystemBase.
- Renamed DIR struct in FatFs code into _DIR_ to avoid conflicts with
  struct DIR in dirent.h
- File abstraction layer: added ConsoleDevice class to store the default
  console device passed by the board support package.
- File abstraction layer: added ConsoleAdapter class to map the old
  Console class into the new file abstraction. Will be removed when all
  bsp will upgrade to the new model.
- File abstraction layer: correctly handling the one FiledescriptorTable
  model when WITH_PROCESSES is undefined (processes branch not merged yet).
- File abstraction layer: now FileDescriptorTable's constructor opens