@@ -63,7 +63,6 @@ static void printUnsignedInt(unsigned int x)
 void default_IRQ_Routine()
 {
     IRQerrorLog("\r\n***Unexpected IRQ\r\n");
-    while(!Console::IRQtxComplete()) ; //Wait until all data sent
     miosix_private::IRQsystemReboot();
 }
 
@@ -79,7 +78,6 @@ void default_IRQ_Routine()
 extern "C" void FIQ_Routine() 
 {
     IRQerrorLog("\r\n***Unexpected FIQ\r\n");
-    while(!Console::IRQtxComplete()) ; //Wait until all data sent
     miosix_private::IRQsystemReboot();
 }
 
@@ -104,7 +102,6 @@ extern "C" void UNDEF_Routine()
 
     IRQerrorLog("\r\n***Unexpected UNDEF @ ");
     printUnsignedInt(returnAddress);
-    while(!Console::IRQtxComplete()) ; //Wait until all data sent
     miosix_private::IRQsystemReboot();
 }
 
@@ -129,7 +126,6 @@ extern "C" void DABT_Routine()
 
     IRQerrorLog("\r\n***Unexpected data abort @ ");
     printUnsignedInt(returnAddress);
-    while(!Console::IRQtxComplete()) ; //Wait until all data sent
     miosix_private::IRQsystemReboot();
 }
 
@@ -154,6 +150,5 @@ extern "C" void PABT_Routine()
 
     IRQerrorLog("\r\n***Unexpected prefetch abort @ ");
     printUnsignedInt(returnAddress);
-    while(!Console::IRQtxComplete()) ; //Wait until all data sent
     miosix_private::IRQsystemReboot();
 }
